--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import {
 	SectionStack,
 	SectionProjects,
 	SectionAbout,
-} from "../components/sections/index.astro"
-import Layout from "../layouts/Layout.astro"
+} from "@/components/sections/index.astro"
+import Layout from "@/layouts/Layout.astro"
 ---
 
 <Layout title="Israel Larrondo | Portfolio">
