--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,13 @@
 ---
-import { getLangFromUrl } from "../i18n/utils"
+import { ViewTransitions } from "astro:transitions"
 import "@fontsource-variable/syne"
 
-import "../css/styles.css"
-import Header from "../components/shared/Header.astro"
-import Footer from "../components/shared/Footer.astro"
-import { ViewTransitions } from "astro:transitions"
+import { getLangFromUrl } from "@/i18n/utils"
+
+import Header from "@/components/shared/Header.astro"
+import Footer from "@/components/shared/Footer.astro"
+
+import "@/css/styles.css"
 
 interface Props {
 	title: string
