--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,10 +1,10 @@
 ---
-import { getLangFromUrl, useTranslations, useTranslatedPath } from "../i18n/utils"
+import { getLangFromUrl, useTranslations, useTranslatedPath } from "@/i18n/utils"
 
-import { BackgroundGrid, Button, Typography } from "../components/index.astro"
-import Layout from "../layouts/Layout.astro"
+import { BackgroundGrid, Button, Typography } from "@/components/index.astro"
+import Layout from "@/layouts/Layout.astro"
 
-import Magnet from "../components/core/Magnet"
+import Magnet from "@/components/core/Magnet"
 import { BiArrowBack } from "react-icons/bi"
 
 const lang = getLangFromUrl(Astro.url)
