--- a/src/pages/components/index.astro
+++ b/src/pages/components/index.astro
@@ -1,16 +1,16 @@
 ---
 // Types
-import type { NavProps } from "../../types"
+import type { NavProps } from "@/types"
 
 // Data
-import menuComponents from "../../content/menu-components"
+import menuComponents from "@/content/menu-components"
 
 // Utils
-import { getLangFromUrl, useTranslatedPath, useTranslations } from "../../i18n/utils"
+import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils"
 
 // Components
-import { Typography, Button } from "../../components/index.astro"
-import PageLayout from "../../layouts/PageLayout.astro"
+import { Typography, Button } from "@/components/index.astro"
+import PageLayout from "@/layouts/PageLayout.astro"
 
 // Consts
 const { url } = Astro
