--- a/src/pages/es/projects/index.astro
+++ b/src/pages/es/projects/index.astro
@@ -1,8 +1,8 @@
 ---
-import { SectionAllProjects } from "../../../components/sections/index.astro"
-import HeaderPage from "../../../components/ui/HeaderPage.astro"
-import { getLangFromUrl, useTranslatedPath, useTranslations } from "../../../i18n/utils"
-import Layout from "../../../layouts/Layout.astro"
+import { SectionAllProjects } from "@/components/sections/index.astro"
+import HeaderPage from "@/components/ui/HeaderPage.astro"
+import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils"
+import Layout from "@/layouts/Layout.astro"
 
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
