--- a/src/pages/es/shop/[id]/index.astro
+++ b/src/pages/es/shop/[id]/index.astro
@@ -1,15 +1,15 @@
 ---
-import type { Langs, Product } from "../../../../types"
+import type { Langs, Product } from "@/types"
 
-import { getLangFromUrl, useTranslatedPath, useTranslations } from "../../../../i18n/utils"
+import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils"
 
-import { HeaderPage } from "../../../../components/ui/index.astro"
-import Layout from "../../../../layouts/Layout.astro"
-import ProductDetail from "../../../../components/sections/ProductDetail.astro"
+import { HeaderPage } from "@/components/ui/index.astro"
+import Layout from "@/layouts/Layout.astro"
+import ProductDetail from "@/components/sections/ProductDetail.astro"
 
 export async function getStaticPaths() {
 	const lang: Langs = "es"
-	const products = await Astro.glob("../../../../content/products/**/*.json")
+	const products = await Astro.glob("@/content/products/**/*.json")
 
 	const productList: Product[] = products
 		.filter((p) => p.default.lang === lang)
