--- a/src/pages/shop/index.astro
+++ b/src/pages/shop/index.astro
@@ -1,8 +1,8 @@
 ---
-import ProductsAll from "../../components/sections/ProductsAll.astro"
-import HeaderPage from "../../components/ui/HeaderPage.astro"
-import { getLangFromUrl, useTranslatedPath, useTranslations } from "../../i18n/utils"
-import Layout from "../../layouts/Layout.astro"
+import ProductsAll from "@/components/sections/ProductsAll.astro"
+import HeaderPage from "@/components/ui/HeaderPage.astro"
+import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils"
+import Layout from "@/layouts/Layout.astro"
 
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
