--- a/src/components/ui/Breadcrumbs.astro
+++ b/src/components/ui/Breadcrumbs.astro
@@ -1,12 +1,17 @@
 ---
-import type { BreadcrumbsItem } from "@/types"
-import { Typography } from "@/components/index.astro"
+interface BreadcrumbsItem {
+	name?: string
+	type: BreadcrumbTypes
+	url?: string
+}
+
+type BreadcrumbTypes = "link" | "separator" | "current"
 
 const { breadcrumbs = [] } = Astro.props
 const totalBreads = breadcrumbs.length
 ---
 
-<Typography class="flex flex-wrap gap-2 text-dark dark:text-white">
+<nav class="flex flex-wrap gap-2 text-dark dark:text-white">
 	{
 		breadcrumbs.map(({ name, type, url }: BreadcrumbsItem, key: number) => {
 			if (type === "link") {
@@ -29,4 +34,4 @@ const totalBreads = breadcrumbs.length
 			return null
 		})
 	}
-</Typography>
+</nav>
