--- a/src/components/core/ButtonMenu.astro
+++ b/src/components/core/ButtonMenu.astro
@@ -3,14 +3,14 @@ import { TbMenu } from "react-icons/tb"
 ---
 
 <div
-	class="button-menu flex aspect-square h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-dark/5 p-1 text-dark/60 transition hover:bg-dark/10 dark:bg-white/5 dark:text-white dark:hover:bg-white/10"
+	class="button-menu bg-dark/5 text-dark/60 hover:bg-dark/10 flex aspect-square h-10 w-10 cursor-pointer items-center justify-center rounded-full p-1 transition dark:bg-white/5 dark:text-white dark:hover:bg-white/10"
 	role="button"
 >
 	<div class="dark:block"><TbMenu /></div>
 </div>
 
-<style>
+<!-- <style>
 	.button-menu.active {
 		@apply bg-primary-400 text-dark hover:bg-primary-300 dark:bg-primary-500 dark:hover:bg-primary-400;
 	}
-</style>
+</style> -->
