--- a/src/components/core/Sidebar/index.astro
+++ b/src/components/core/Sidebar/index.astro
@@ -10,7 +10,7 @@ const { items } = data as NavProps
 	{
 		items.map(({ label, items }) => (
 			<div class="relative">
-				<Typography type="h6" class="py-4 text-dark dark:text-white">
+				<Typography type="h6" class="text-dark py-4 dark:text-white">
 					{label}
 				</Typography>
 				{items.map(({ label, path }) => (
@@ -19,7 +19,7 @@ const { items } = data as NavProps
 							<Typography
 								type="a"
 								href={path}
-								class="flex py-2 text-dark/60 transition-opacity hover:opacity-70 dark:text-white/60"
+								class="text-dark/60 flex py-2 transition-opacity hover:opacity-70 dark:text-white/60"
 							>
 								{label}
 							</Typography>
