--- a/src/components/core/SwitchScheme.astro
+++ b/src/components/core/SwitchScheme.astro
@@ -3,9 +3,9 @@ import { TbMoonFilled, TbMoonOff } from "react-icons/tb"
 ---
 
 <div
-	class="schemeSelector flex aspect-square h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-dark/5 p-1 transition-colors hover:bg-dark/10 dark:bg-white/5 dark:hover:bg-white/10"
+	class="schemeSelector bg-dark/5 hover:bg-dark/10 flex aspect-square h-8 w-8 cursor-pointer items-center justify-center rounded-full p-1 transition-colors dark:bg-white/5 dark:hover:bg-white/10"
 >
-	<div class="hidden text-dark/60 dark:block dark:text-white"><TbMoonFilled /></div>
+	<div class="text-dark/60 hidden dark:block dark:text-white"><TbMoonFilled /></div>
 	<div class="block dark:hidden dark:text-white/40"><TbMoonOff /></div>
 </div>
 
