--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -8,7 +8,7 @@ const { about: AboutContent } = SECTIONS_CONTENT[lang]
 ---
 
 <section
-	class="relative z-10 flex items-center justify-center bg-white px-5 pb-8 pt-14 dark:bg-dark md:pb-24 md:pt-40"
+	class="dark:bg-dark relative z-10 flex items-center justify-center bg-white px-5 pt-14 pb-8 md:pt-40 md:pb-24"
 >
 	<AboutContent />
 </section>
