--- a/src/components/sections/AllProjects.astro
+++ b/src/components/sections/AllProjects.astro
@@ -1,13 +1,19 @@
 ---
 import { getLangFromUrl } from "@/i18n/utils"
-import type { Langs, Project } from "@/types"
+import type { Langs, ProjectFromImport, ProjectMDXContent, ProjectMDXGlobResult } from "@/types"
 import { ProjectsList } from "@/components/index.astro"
 
 const lang = getLangFromUrl(Astro.url) as Langs
 
-const projects = await Astro.glob("@/content/projects/**/*.mdx")
-const projectList: Project[] = projects
-	.filter((p) => p.frontmatter.lang === lang)
+const projectFiles = (await import.meta.glob<ProjectMDXContent>("@/content/projects/**/*.mdx", {
+	eager: true,
+})) as ProjectMDXGlobResult
+
+const projectList: ProjectFromImport[] = Object.values(projectFiles)
+	.filter(
+		(project): project is ProjectMDXContent & { frontmatter: { lang: Langs } } =>
+			project.frontmatter.lang === lang
+	)
 	.map(({ frontmatter: { lang, name, title, category, images, description }, Content }) => ({
 		lang,
 		name,
