--- a/src/components/sections/ShopThankYou.astro
+++ b/src/components/sections/ShopThankYou.astro
@@ -15,7 +15,7 @@ const t = useTranslations(lang)
 			>{t("shop.thankYou.description")}</Typography
 		>
 
-		<div class="max-w-[600px] text-balance rounded bg-yellow-100 px-8 py-4 text-yellow-900">
+		<div class="max-w-[600px] rounded-sm bg-yellow-100 px-8 py-4 text-balance text-yellow-900">
 			{t("shop.thankYou.alert")}
 		</div>
 
