--- a/src/components/ui/Nav.astro
+++ b/src/components/ui/Nav.astro
@@ -28,7 +28,7 @@ const isThisPage = (pageUrl = "", currentPath = "", lang = "") => {
 				<li>
 					<a
 						href={path}
-						class={`block text-center font-Syne text-2xl font-bold text-dark transition-opacity hover:opacity-80 dark:text-white lg:text-xl ${
+						class={`font-Syne text-dark block text-center text-2xl font-bold transition-opacity hover:opacity-80 lg:text-xl dark:text-white ${
 							isActive ? "" : "opacity-60"
 						}`}
 					>
