--- a/src/content/projects/content/en/demo.astro
+++ b/src/content/projects/content/en/demo.astro
@@ -16,7 +16,7 @@ import { Button, Typography } from "../../../../components/index.astro"
 		expedita.
 	</Typography>
 	<Typography type="h3" class="text-dark dark:text-white">Soy el contenido del Demo</Typography>
-	<Typography class="pb-28 text-dark dark:text-white">
+	<Typography class="text-dark pb-28 dark:text-white">
 		Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sed maxime praesentium
 		corporis quo ipsam id doloribus laborum, quas in officiis nostrum hic architecto quod rem sunt
 		necessitatibus voluptas accusantium commodi? Molestias eaque architecto laborum rem sunt eos
