--- a/src/content/sections/about-en.astro
+++ b/src/content/sections/about-en.astro
@@ -3,7 +3,7 @@ import { Typography } from "../../components/index.astro"
 ---
 
 <div class="container">
-	<Typography class="h3 mb-10 text-pretty font-normal leading-normal dark:text-white">
+	<Typography class="h3 mb-10 leading-normal font-normal text-pretty dark:text-white">
 		👉{" "}
 		<span class="mark-text font-bold">
 			<span>I am a specialist in Web Design and Front-End Development.</span>
@@ -19,7 +19,7 @@ import { Typography } from "../../components/index.astro"
 		. In fact, this portfolio you're looking at is also built with these technologies and showcases my
 		design and development projects.
 	</Typography>
-	<Typography class="h3 text-pretty font-normal leading-normal dark:text-white">
+	<Typography class="h3 leading-normal font-normal text-pretty dark:text-white">
 		Take a look and let me impress you! 😁
 	</Typography>
 </div>
