--- a/src/content/sections/about-es.astro
+++ b/src/content/sections/about-es.astro
@@ -3,7 +3,7 @@ import { Typography } from "../../components/index.astro"
 ---
 
 <div class="container">
-	<Typography class="h3 mb-10 text-pretty font-normal leading-normal dark:text-white">
+	<Typography class="h3 mb-10 leading-normal font-normal text-pretty dark:text-white">
 		👉{" "}
 		<span class="mark-text font-bold">
 			<span>Soy un especialista en Diseño Web y Desarrollo Front-End</span>
@@ -19,7 +19,7 @@ import { Typography } from "../../components/index.astro"
 		. De hecho, este portafolio que estás viendo también está construido con estas tecnologías y exhibe
 		mis proyectos de diseño y desarrollo.
 	</Typography>
-	<Typography class="h3 text-pretty font-normal leading-normal dark:text-white">
+	<Typography class="h3 leading-normal font-normal text-pretty dark:text-white">
 		¡Echa un vistazo y déjame impresionarte! 😁
 	</Typography>
 </div>
