--- a/src/pages/es/projects/index.astro
+++ b/src/pages/es/projects/index.astro
@@ -25,7 +25,7 @@ const breadcrumbs = [
 ---
 
 <Layout title="Israel Larrondo | Proyectos">
-	<div class="relative z-10 bg-white dark:bg-dark">
+	<div class="dark:bg-dark relative z-10 bg-white">
 		<HeaderPage title={t("projects.title")} {breadcrumbs} />
 		<SectionAllProjects />
 	</div>
