--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -9,24 +9,24 @@ const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 ---
 
-<section class="relative z-10 bg-white dark:bg-dark">
+<section class="dark:bg-dark relative z-10 bg-white">
 	<div class="flex w-full justify-center overflow-hidden px-5 py-14 md:py-40">
 		<div class="container">
 			<div class="grid grid-cols-2 items-center gap-8 sm:grid-cols-12">
 				<div class="hero-info relative z-10 col-span-2 sm:col-span-8">
 					<h1 class="mb-2">
 						<div
-							class="mb-2 inline-flex bg-secondary-400 p-2 text-[clamp(1.6rem,5vw,3.75rem)] font-bold leading-[1em] text-white dark:bg-secondary-300 dark:text-dark"
+							class="bg-secondary-400 dark:bg-secondary-300 dark:text-dark mb-2 inline-flex p-2 text-[clamp(1.6rem,5vw,3.75rem)] leading-[1em] font-bold text-white"
 						>
 							{t("home.hero.greeting")}
 						</div>
-						<div class="h1 heading font-black text-dark mix-blend-difference dark:text-white">
+						<div class="h1 heading text-dark font-black mix-blend-difference dark:text-white">
 							<span class="whitespace-nowrap">{t("home.hero.name")}</span>
 							<span class="whitespace-nowrap">{t("home.hero.lastname")}</span>
 						</div>
 					</h1>
 					<h2
-						class="text-[clamp(1.6rem,5vw,3.75rem)] font-bold text-primary-500 dark:text-primary-300"
+						class="text-primary-500 dark:text-primary-300 text-[clamp(1.6rem,5vw,3.75rem)] font-bold"
 					>
 						{t("home.hero.job")}
 					</h2>
@@ -34,7 +34,7 @@ const t = useTranslations(lang)
 				<div class="col-span-4">
 					<div class="avatar">
 						<div
-							class="-mb-36 flex aspect-square h-full w-full translate-x-[20%] animate-avatar justify-end overflow-clip bg-secondary-400 dark:bg-secondary-300 sm:mb-0 sm:h-96 sm:w-96 sm:translate-x-0"
+							class="animate-avatar bg-secondary-400 dark:bg-secondary-300 -mb-36 flex aspect-square h-full w-full translate-x-[20%] justify-end overflow-clip sm:mb-0 sm:h-96 sm:w-96 sm:translate-x-0"
 						>
 							<Image
 								src={avatar}
