--- a/src/components/sections/ProductsAll.astro
+++ b/src/components/sections/ProductsAll.astro
@@ -1,19 +1,28 @@
 ---
 import { getLangFromUrl } from "@/i18n/utils"
-import type { Langs, Product } from "@/types"
+import type {
+	Langs,
+	Product,
+	ProductFromImport,
+	ProductMDXContent,
+	ProductMDXGlobResult,
+} from "@/types"
 import List from "@/components/core/Products/List.astro"
 
 const lang = getLangFromUrl(Astro.url) as Langs
 
-const products = await Astro.glob("@/content/products/**/*.json")
+const productFiles = (await import.meta.glob<ProductMDXContent>("@/content/products/**/*.json", {
+	eager: true,
+})) as ProductMDXGlobResult
 
-const productList: Product[] = products
-	.filter((p) => p.default.lang === lang)
+const productList: ProductFromImport[] = Object.values(productFiles)
+	.filter(
+		(product): product is ProductMDXContent & { default: { lang: Langs } } =>
+			product.default.lang === lang
+	)
 	.map(
 		({
 			default: {
-				id,
-				slug,
 				name,
 				title,
 				category,
@@ -24,9 +33,8 @@ const productList: Product[] = products
 				paymentMethods,
 				lang,
 			},
+			Content,
 		}) => ({
-			id,
-			slug,
 			name,
 			title,
 			category,
@@ -36,6 +44,7 @@ const productList: Product[] = products
 			price,
 			paymentMethods,
 			lang,
+			Content,
 		})
 	)
 ---
