--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -7,13 +7,13 @@ const t = useTranslations(lang)
 ---
 
 <footer class="sticky bottom-0 z-0 mt-auto">
-	<div class="rounded-t-4xl bg-primary-500 p-7 dark:bg-primary-300 md:rounded-t-main md:p-14">
+	<div class="bg-primary-500 dark:bg-primary-300 md:rounded-t-main rounded-t-4xl p-7 md:p-14">
 		<div class="container mx-auto">
 			<div class="grid gap-6 md:grid-cols-12">
 				<div class="md:col-span-8">
 					<div class="flex flex-col gap-4">
 						<Typography type="h4" class="text-dark">{t("footer.title")}</Typography>
-						<Typography class="text-pretty text-dark">{t("footer.description")}</Typography>
+						<Typography class="text-dark text-pretty">{t("footer.description")}</Typography>
 					</div>
 				</div>
 				<div class="self-center md:col-span-4">
