--- a/src/components/ui/Menu.astro
+++ b/src/components/ui/Menu.astro
@@ -7,14 +7,14 @@ const activeClass = "[.active&]:opacity-100 [.active&]:translate-y-0 [.active&]:
 
 <div
 	class:list={[
-		"pointer-events-none fixed left-0 right-0 top-20 z-50 flex w-full translate-y-4 items-center justify-center p-4 opacity-0 transition lg:hidden",
+		"pointer-events-none fixed top-20 right-0 left-0 z-50 flex w-full translate-y-4 items-center justify-center p-4 opacity-0 transition lg:hidden",
 		activeClass,
 	]}
 	id="menu"
 >
 	<div class="container h-full">
 		<div
-			class="flex h-full w-full items-center justify-center rounded-3xl bg-white/80 px-8 py-16 backdrop-blur-md dark:bg-dark/90"
+			class="dark:bg-dark/90 flex h-full w-full items-center justify-center rounded-3xl bg-white/80 px-8 py-16 backdrop-blur-md"
 		>
 			<div class="flex flex-col gap-12">
 				<Nav />
