--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { ViewTransitions } from "astro:transitions"
+import { ClientRouter } from "astro:transitions"
 import "@fontsource-variable/syne"
 
 import { getLangFromUrl } from "@/i18n/utils"
@@ -7,7 +7,7 @@ import { getLangFromUrl } from "@/i18n/utils"
 import Header from "@/components/shared/Header.astro"
 import Footer from "@/components/shared/Footer.astro"
 
-import "@/css/styles.css"
+import "@/css/global.css"
 
 interface Props {
 	title: string
@@ -30,10 +30,10 @@ const lang = getLangFromUrl(Astro.url)
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<ViewTransitions />
+		<ClientRouter />
 	</head>
 
-	<body class="flex min-h-screen flex-col bg-white dark:bg-dark">
+	<body class="dark:bg-dark flex min-h-screen flex-col bg-white">
 		{showHeader && <Header />}
 		<slot />
 		{showFooter && <Footer />}
