--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -34,9 +34,9 @@ const hasNav = nav && Object.keys(nav)?.length
 		<ViewTransitions />
 	</head>
 
-	<body class="bg-white dark:bg-dark">
+	<body class="dark:bg-dark bg-white">
 		<Header lang={false} />
-		<main class="relative z-10 bg-white dark:bg-dark">
+		<main class="dark:bg-dark relative z-10 bg-white">
 			<div class="container mx-auto">
 				<HeaderPage title={title} {breadcrumbs} name={name} />
 				<div class="grid grid-cols-8 gap-12 px-5 py-10 md:gap-4">
