--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ const translatePath = useTranslatedPath(lang)
 
 <Layout title="Israel Larrondo | Error 404, Not Found" showFooter={false} showHeader={false}>
 	<div
-		class="container relative mx-auto flex h-screen flex-col items-center justify-center gap-12 text-center"
+		class="relative container mx-auto flex h-screen flex-col items-center justify-center gap-12 text-center"
 	>
 		<Magnet client:only
 			><Typography
