--- a/src/pages/shop/index.astro
+++ b/src/pages/shop/index.astro
@@ -25,7 +25,7 @@ const breadcrumbs = [
 ---
 
 <Layout title="Israel Larrondo | Shop">
-	<div class="relative z-10 bg-white dark:bg-dark">
+	<div class="dark:bg-dark relative z-10 bg-white">
 		<HeaderPage title={t("shop.title")} {breadcrumbs} />
 		<ProductsAll />
 	</div>
