--- a/src/pages/shop/thank-you.astro
+++ b/src/pages/shop/thank-you.astro
@@ -34,7 +34,7 @@ const breadcrumbs = [
 ---
 
 <Layout title="Israel Larrondo | Shop - Thank You!">
-	<div class="relative z-10 bg-white dark:bg-dark">
+	<div class="dark:bg-dark relative z-10 bg-white">
 		<HeaderPage {breadcrumbs} />
 		<ShopThankYou />
 	</div>
