--- a/src/content/projects/content/en/demo.astro
+++ b/src/content/projects/content/en/demo.astro
@@ -1,5 +1,5 @@
 ---
-import { Button, Typography } from "../../../../components/index.astro"
+import { Typography } from "../../../../components/index.astro"
 ---
 
 <div class="mx-auto max-w-4xl">
