--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -7,7 +7,7 @@ const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 const translatePath = useTranslatedPath(lang)
 
-const projectFiles = (await import.meta.glob<ProjectMDXContent>("@/content/projects/**/*.mdx", {
+const projectFiles = (import.meta.glob<ProjectMDXContent>("@/content/projects/**/*.mdx", {
 	eager: true,
 })) as ProjectMDXGlobResult
 
